# minimality-auto

./: .gitignore  README.md  pyproject.toml
docs/: permutation-models.md
src/minimality_auto/: __init__.py  __main__.py  core.py  main.py  search.py
src/minimality_auto/separators/: __init__.py  amalgam.py  counting.py  determinant.py  finite_field.py  finite_model.py  presence.py  spin.py  substitution.py
tests/: test_cli.py  test_core.py  test_exotic_algebra_adversarial.py  test_exotic_models.py  test_exotic_modules_generic_prop.py  test_false_positive_regressions.py  test_finite_model.py  test_finite_model_generic_prop.py  test_paper_fragments.py  test_prop_core.py  test_real_clifford_ch.py  test_search.py  test_search_genericity.py  test_spin_prop_safety.py  test_structural_modules_generic.py
theories/: clifford_cs.json  clifford_t.json  cnot_dihedral.json  qubit_clifford.json  qutrit_clifford.json  real_clifford.json  real_clifford_ch.json  realclifford-ch-simplified.json
